💄 Fix position title and bottom part spacings

--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -91,7 +91,7 @@ body
 
   &-properties
     margin-top: 1px
-    margin-bottom: 27px
+    margin-bottom: 39px
 
   &-property
     margin-top: 14px
@@ -111,7 +111,7 @@ body
 
   &-logo
     margin: 0 auto
-    margin-bottom: 13px
+    margin-bottom: 21px
 
     height: 96px
     width: 96px
@@ -128,7 +128,7 @@ body
     text-align: center
 
   &-desc
-    margin-bottom: 25px
+    margin-bottom: 33px
 
     @extend .caption-tag
     text-align: center
@@ -150,7 +150,7 @@ body
 
     z-index: -50
 
-    transform: translateY(-152px)
+    transform: translateY(-216px)
 
     &-middle
       position: relative
